<resources>
    <string name="app_name">My Application</string>
    <string name="login_title">Login To Your Account</string>
    <string name="login_description">Explore the best experience now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
</resources>