<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingEnd="22dp"
    android:background="#282A36"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/hint_text_color"
        android:text="@string/login_description" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_text_color" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_text_color"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="12dp"
        android:textColor="#1D90F4"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1D90F4"/>


</LinearLayout>